<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tip_text_prefix">Tip is</string>
    <string name="tip_number">0.00</string>
    <string name="text_ten_percent">10%</string>
    <string name="text_fifteen_percent">15%</string>
    <string name="text_twenty_percent">20%</string>
    <string name="amount_total_text">Enter total amount</string>
    <string name="title_activity_edit_tip">EditTipActivity</string>
    <string name="text_edit_tip">Set New Tip Amount</string>
    <string name="text_dollar_sign">$</string>
    <string-array name="percentage_array">
        <item >10%</item>
        <item >15%</item>
        <item >20%</item>
    </string-array>

</resources>
