<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn15p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn10p"
        android:layout_alignBottom="@+id/btn10p"
        android:layout_centerHorizontal="true"
        android:onClick="onClickBtn15p"
        android:text="@string/text_fifteen_percent" />

    <Button
        android:id="@+id/btn10p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTotalAmount"
        android:layout_marginTop="50dp"
        android:layout_toLeftOf="@+id/btn15p"
        android:onClick="onClickBtn10p" 
        android:text="@string/text_ten_percent" />

    <Button
        android:id="@+id/btn20p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15p"
        android:layout_alignBottom="@+id/btn15p"
        android:layout_toRightOf="@+id/btn15p"
        android:onClick="onClickBtn20p"
        android:text="@string/text_twenty_percent" />

    <EditText
        android:id="@+id/etTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="54dp"
        android:hint="@string/amount_total_text"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTipPrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn10p"
        android:layout_below="@+id/btn10p"
        android:layout_marginTop="108dp"
        android:text="@string/tip_text_prefix"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvDollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipPrefix"
        android:layout_alignBottom="@+id/tvTipPrefix"
        android:layout_toRightOf="@+id/btn10p"
        android:text="@string/text_dollar_sign"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvDollarSign"
        android:layout_alignRight="@+id/etTotalAmount"
        android:layout_alignTop="@+id/tvDollarSign"
        android:layout_toRightOf="@+id/tvDollarSign"
        android:text="@string/tip_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
