<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvDollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/tvTipAmount"
        android:text="@string/text_dollar_sign"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/amount_total_text"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/spinPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTotalAmount"
        android:layout_below="@+id/etTotalAmount"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/tvDollarSign" />

    <TextView
        android:id="@+id/tvTipPrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinPercentage"
        android:layout_centerVertical="true"
        android:text="@string/tip_text_prefix"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etTotalAmount"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:text="@string/tip_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>